# jobdex

./: .gitignore  .impeccable.md  1  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  comp_research.md  components.json  index.html  outreachos-product-strategy.md  package-lock.json  package.json  release_notes_v0.1.2.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
.roo/: system-prompt-the-architect
.roo/rules-code/: rules.md
.roo/rules-the-architect/: rules.md
docs/: PRD.md  PRD_research.md  contact.html  download.html  index.html  llm.txt  outlook-setup-guide.md  privacy.html  robots.txt  sitemap.xml  terms.html
docs/css/: style.css
docs/js/: main.js  starfield.js
scripts/: fix-dmg.sh
src/: App.tsx  changelog.ts  main.tsx
src-core/: Cargo.toml
src-core/migrations/: 20260121000000_init.sql  20260121173700_add_statuses_and_dates.sql  20260122120000_update_status_colors_to_hex.sql  20260122170000_add_contact_details.sql  20260122190000_tags_and_strict_statuses.sql  20260122200000_fix_status_split.sql  20260123000000_force_fix_orphans.sql  20260217000000_email_crm_phase1.sql  20260218000001_email_sync.sql  20260302000000_email_tracking_id.sql  20260304210000_remove_tracking_feature.sql  20260306131500_email_templates.sql  20260321000000_email_signatures.sql  20260321000001_contact_files.sql  20260321000002_email_attachments.sql  (+1 more)
src-core/src/: ai.rs  (+10 more)
src-mcp/: Cargo.toml
src-mcp/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
(+73 files in other folders)
