[package]
name = "jobdex-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jobdex-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }